--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -19,7 +19,7 @@
                 <rect x="14" y="14" width="7" height="7"></rect>
                 <rect x="3" y="14" width="7" height="7"></rect>
             </svg>
-            Tableaud de Bord
+            Tableau de Bord
         </a>
     </li>
     
