--- a/templates/userinfo/_form.html.twig
+++ b/templates/userinfo/_form.html.twig
@@ -7,7 +7,7 @@
         <input type="hidden" name="userinfo[userid]" value="{{ app.user.id }}">
         <input type="hidden" name="userinfo[categoryid]" value="{{ userinfo.categoryid }}">
         <div class="cpp-fiel">
-            <input type="text" name="userinfo[title]" placeholder="Başlık" value="{{ userinfo.title }}">
+            <input type="text" name="userinfo[title]" placeholder="title" value="{{ userinfo.title }}">
         </div>
         <div class="cpp-fiel">
             <input type="text" name="userinfo[link]" placeholder="Link" value="{{ userinfo.link }}">
