--- a/templates/userpanel/index.html.twig
+++ b/templates/userpanel/index.html.twig
@@ -54,14 +54,6 @@
                                                 <h5>Skills</h5>
                                                 <textarea name="skills">{{ user.skills }}</textarea>
                                             </div>
-                                            <div class="cp-field">
-                                                <h5>Workarea</h5>
-                                                <textarea name="workarea">{{ user.workarea }}</textarea>
-                                            </div>
-                                            <div class="cp-field">
-                                                <h5>Title and Tasks</h5>
-                                                <textarea name="titleandtasks">{{ user.titleandtasks }}</textarea>
-                                            </div>
 
 
                                         </div>
@@ -72,44 +64,16 @@
                                                     <h3 style="color: black; font-size: 20px;">Eğitim Bilgileri</h3>
                                                 </div>
                                                 <div class="cp-field">
-                                                    <h5>Lisans</h5>
+                                                    <h5>Projets</h5>
                                                     <div class="cpp-fiel">
                                                         <input type="text" name="edulis" placeholder="Lisans Öğretimi" value="{{ user.edulis }}">
                                                         <i class="fa fa-envelope"></i>
                                                     </div>
                                                 </div>
-                                                <div class="cp-field">
-                                                    <h5>Yüksek Lisans</h5>
-                                                    <div class="cpp-fiel">
-                                                        <input type="text" name="edumaster" placeholder="Yüksek Lisans Öğretimi" value="{{ user.edumaster }}">
-                                                        <i class="fa fa-envelope"></i>
-                                                    </div>
-                                                </div>
-                                                <div class="cp-field">
-                                                    <h5>Doktora</h5>
-                                                    <div class="cpp-fiel">
-                                                        <input type="text" name="edudoc" placeholder="Doktora Öğretimi" value="{{ user.edudoc }}">
-                                                        <i class="fa fa-envelope"></i>
-                                                    </div>
-                                                </div>
-                                            </div>
+
                                             <div class="notbar">
                                                 <div class="notbar">
                                                     <h3 style="color: black; font-size: 20px;">Tez Bilgileri</h3>
-                                                </div>
-                                                <div class="cp-field">
-                                                    <h5>Yüksek Lisans</h5>
-                                                    <div class="cpp-fiel">
-                                                        <input type="text" name="thesismaster" placeholder="Yüksek Lisans Tezi" value="{{ user.thesismaster }}">
-                                                        <i class="fa fa-envelope"></i>
-                                                    </div>
-                                                </div>
-                                                <div class="cp-field">
-                                                    <h5>Doktora</h5>
-                                                    <div class="cpp-fiel">
-                                                        <input type="text" name="thesisdoc" placeholder="Doktora Tezi" value="{{ user.thesisdoc }}">
-                                                        <i class="fa fa-envelope"></i>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -412,24 +376,13 @@
                                                     <img src="images\pro-icon2.png" alt="">
                                                     <div class="bx-info">
                                                         <h3>{{ totalresearch }}</h3>
-                                                        <h5>Total Research</h5>
+                                                        <h5>Projets total</h5>
                                                     </div><!--bx-info end-->
                                                 </div><!--pro-bx end-->
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
                                             </div><!--profile-bx-info end-->
                                         </div>
-                                        <div class="col-lg-3 col-md-6 col-sm-12">
-                                            <div class="profile-bx-info">
-                                                <div class="pro-bx">
-                                                    <img src="images\pro-icon3.png" alt="">
-                                                    <div class="bx-info">
-                                                        <h3>{{ totalquestion }}</h3>
-                                                        <h5>Total Question</h5>
-                                                    </div><!--bx-info end-->
-                                                </div><!--pro-bx end-->
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
-                                            </div><!--profile-bx-info end-->
-                                        </div>
+                                    
                                         <!--<div class="col-lg-3 col-md-6 col-sm-12">
                                             <div class="profile-bx-info">
                                                 <div class="pro-bx">
