--- a/templates/profile.html.twig
+++ b/templates/profile.html.twig
@@ -15,20 +15,25 @@
 
         <div class="profile-details">
             <div class="form-group">
-                <label>Name</label>
+                <label>Nom</label>
                 <input type="text" value="Groupe 4" readonly>
             </div>
 
             <div class="form-group">
-                <label>Email address</label>
-                <input type="email" value="example@gmail.com" readonly>
-                <button class="btn">Change email address</button>
+                <label>Prenom</label>
+                <input type="text" value="Groupe 4" readonly>
             </div>
 
             <div class="form-group">
-                <label>Password</label>
+                <label>Adresse email</label>
+                <input type="email" value="example@gmail.com" readonly>
+                <button class="btn">Changer l'adresse email</button>
+            </div>
+
+            <div class="form-group">
+                <label>Mot de passe</label>
                 <input type="password" value="*********" readonly>
-                <button class="btn">Change password</button>
+                <button class="btn">Changer le mot de passe</button>
             </div>
         </div>
     </div>
