--- a/templates/tasks/index.html.twig
+++ b/templates/tasks/index.html.twig
@@ -43,7 +43,7 @@
 
     <!-- Floating Button -->
     <button id="openModalBtn" class="fixed bottom-8 right-8 bg-primary border border-black text-black font-medium py-2.5 px-5 rounded-full shadow-lg">
-        New Task
+         Nouvelle Tache
     </button>
 
     <!-- Modal -->
@@ -51,7 +51,7 @@
         <div class="relative top-10 mx-auto p-5 border w-6/12 shadow-lg rounded-2xl bg-beige border-black max-h-[90vh] flex flex-col">
             <div class="overflow-y-auto flex-grow custom-scrollbar">
                 <div class="mt-4">
-                    <h3 class="text-xl font-medium text-black text-center">Create a new Task</h3>
+                    <h3 class="text-xl font-medium text-black text-center">Créer une Nouvelle Tâche</h3>
                     {{ form_start(taskForm, {'attr': {'id': 'taskForm'}}) }}
                     <div class="mt-3 px-7 py-3">
                         <div class="mb-6">
@@ -83,14 +83,14 @@
                                     </div>
                                 {% endfor %}
                             </div>
-                            <p id="selectedCount" class="mt-2 text-sm text-gray-600">0 users selected</p>
+                            <p id="selectedCount" class="mt-2 text-sm text-gray-600">0 utilisateur sélectionné</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="mt-4 text-center">
                 <button type="submit" id="submitTaskBtn" class="bg-primary border border-black text-black font-medium py-2.5 px-5 rounded-full">
-                    Create Task
+                    Créer la Tâche
                 </button>
             </div>
             {{ form_end(taskForm) }}
@@ -120,7 +120,7 @@
                     <p id="taskDescription" class="text-md text-justify text-gray-700"></p>
                 </div>
                 <div class="flex flex-col mt-8">
-                    <h3 class="text-lg text-gray-600 font-medium mb-4">Assigned user(s)</h3>
+                    <h3 class="text-lg text-gray-600 font-medium mb-4">Utilisateur(s) assigné(s)</h3>
                     <div id="taskUsers" class="flex flex-row gap-6">
                         <!-- Users will be dynamically inserted here -->
                     </div>
@@ -128,7 +128,7 @@
             </div>
             <div class="mt-12 text-right mb-4">
                 <button id="openEditModal" class="bg-primary border border-black text-black font-medium py-2.5 px-5 rounded-full">
-                    Edit Task
+                    Modifier la tâche
                 </button>
             </div>
         </div>
@@ -138,7 +138,7 @@
         <div class="relative top-10 mx-auto p-5 border w-6/12 shadow-lg rounded-2xl bg-beige border-black max-h-[90vh] flex flex-col">
             <div class="overflow-y-auto flex-grow custom-scrollbar">
                 <div class="mt-4">
-                    <h3 class="text-xl font-medium text-black text-center">Edit Task</h3>
+                    <h3 class="text-xl font-medium text-black text-center">Modifier la tâche</h3>
                     <div id="editTaskFormContainer">
                         <!-- The form will be dynamically inserted here -->
                     </div>
@@ -146,7 +146,7 @@
             </div>
             <div class="mt-4 text-center">
                 <button type="submit" form="editTaskForm" class="bg-primary border border-black text-black font-medium py-2.5 px-5 rounded-full">
-                    Update Task
+                    Mettre à jour la tâche
                 </button>
             </div>
         </div>
@@ -155,15 +155,15 @@
     <div id="deleteConfirmModal" class="hidden fixed inset-0 bg-beige bg-opacity-50 overflow-y-auto h-full w-full">
         <div class="relative top-20 mx-auto py-5 px-16 border w-6/12 shadow-lg rounded-2xl bg-beige border-black">
             <div class="mt-4">
-                <h2 class="text-xl font-bold mb-4 text-center">Confirm Deletion</h2>
-                <p class="text-lg text-gray-700 text-center">Are you sure you want to delete this task?</p>
+                <h2 class="text-xl font-bold mb-4 text-center">Confirmer la suppression</h2>
+                <p class="text-lg text-gray-700 text-center">Etes-vous sûr de vouloir supprimer la tâche?</p>
             </div>
             <div class="mt-6 text-center space-x-4">
                 <button id="confirmDeleteBtn" class="bg-red-500 text-white font-medium py-2.5 px-5 rounded-full">
-                    Delete
+                    Supprimer
                 </button>
                 <button id="cancelDeleteBtn" class="bg-gray-300 text-black font-medium py-2.5 px-5 rounded-full">
-                    Cancel
+                    Annuler
                 </button>
             </div>
         </div>
