--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -24,7 +24,8 @@
     </li>
     
     <li class="px-6 py-4 hover:bg-yellow-100 border-t text-md font-semibold 
-        {{ app.request.attributes.get('_route') == 'task_index' ? 'bg-yellow-300' : '' }}">
+        {{ app.request.attributes.get('_route') == '
+        ' ? 'bg-yellow-300' : '' }}">
         <a href="{{ path('task_index') }}" class="flex items-center text-gray-700">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M9 11l3 3L22 4"></path>
