--- a/templates/components/topbar_task.html.twig
+++ b/templates/components/topbar_task.html.twig
@@ -22,7 +22,9 @@
             </svg>
         </a>
         <div class="flex items-center">
-            <span class="mr-2 text-sm text-gray-600">Mon Compte</span>
+            <span class="mr-2 text-sm text-gray-600">
+                <a href="{{ path('profile') }}" class="text-gray-600 hover:text-gray-800">Mon Compte</a>
+            </span>
             <div class="w-8 h-8 bg-yellow-300 border-black border rounded-full"></div>
         </div>
     </div>
